--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
         <title>Monopoly | $MPLY</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
+<link rel="shortcut icon" type="image/x-icon" href="assets/favicon.png">
         <!-- Place favicon.png in the root directory -->
 <!-- ========================= CSS here ========================= -->
-<link rel="stylesheet" href="assets/css/bootstrap-5.0.0-alpha-1.min.css">
-        <link rel="stylesheet" href="assets/css/LineIcons.2.0.css">
-<link rel="stylesheet" href="assets/css/animate.css">
-<link rel="stylesheet" href="assets/css/main.css">
+<link rel="stylesheet" href="bootstrap-5.0.0-alpha-1.min.css">
+        <link rel="stylesheet" href="LineIcons.2.0.css">
+<link rel="stylesheet" href="animate.css">
+<link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-R4JGGTD8DR"></script>
