--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Monopoly | $MPLY</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="shortcut icon" type="image/x-icon" href="assets/favicon.png">
+<link rel="shortcut icon" type="image/x-icon" href="/favicon.png">
         <!-- Place favicon.png in the root directory -->
 <!-- ========================= CSS here ========================= -->
 <link rel="stylesheet" href="bootstrap-5.0.0-alpha-1.min.css">
